cmake_minimum_required(VERSION 3.8)
project(test_server)
set(CMAKE_C_STANDARD 11)
include_directories(/usr/local/include/glib-2.0)
link_directories(/usr/local/lib)
set(CMAKE_C_STANDARD 11)
set(SOURCE_FILES src/httpd.c)
add_executable(test_server ${SOURCE_FILES})
target_link_libraries(test_server glib-2.0.dylib)